--- a/DiceeGame/Base.lproj/Main.storyboard
+++ b/DiceeGame/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DiceeGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="CPU-sP-KpP">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="b8D-uC-jMf">
+                                <rect key="frame" x="240" y="363" width="120" height="120"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="gOa-Eg-3Fn">
+                                <rect key="frame" x="87" y="139" width="240" height="129"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="oGt-Pb-fFh">
+                                <rect key="frame" x="54" y="363" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="SAY-Rd-mG6"/>
+                                    <constraint firstAttribute="width" constant="120" id="Y8S-Jt-sTB"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HWM-6i-IT9">
+                                <rect key="frame" x="151" y="550" width="112" height="67"/>
+                                <color key="backgroundColor" red="0.55857104059999996" green="0.1616092324" blue="0.1449967325" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Roll">
+                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle0"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="rollButtomClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ebd-Mc-J5a"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score:0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OoA-NK-jvl">
+                                <rect key="frame" x="54" y="673" width="306" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OoA-NK-jvl" firstAttribute="trailing" secondItem="b8D-uC-jMf" secondAttribute="trailing" id="0bW-Ks-fcX"/>
+                            <constraint firstItem="oGt-Pb-fFh" firstAttribute="top" secondItem="gOa-Eg-3Fn" secondAttribute="bottom" constant="95" id="1u0-dD-I1Y"/>
+                            <constraint firstItem="CPU-sP-KpP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2KN-Re-NMn"/>
+                            <constraint firstItem="HWM-6i-IT9" firstAttribute="centerX" secondItem="OoA-NK-jvl" secondAttribute="centerX" id="5dm-Wn-6Ar"/>
+                            <constraint firstItem="CPU-sP-KpP" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="AfT-CN-ugc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OoA-NK-jvl" secondAttribute="bottom" constant="152" id="Asa-uX-tBY"/>
+                            <constraint firstItem="oGt-Pb-fFh" firstAttribute="bottom" secondItem="b8D-uC-jMf" secondAttribute="bottom" id="ECa-Cc-8tQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b8D-uC-jMf" secondAttribute="trailing" constant="54" id="HOk-di-GkS"/>
+                            <constraint firstItem="CPU-sP-KpP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ha8-gk-f97"/>
+                            <constraint firstItem="gOa-Eg-3Fn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="LDd-w5-Nn3"/>
+                            <constraint firstItem="CPU-sP-KpP" firstAttribute="centerX" secondItem="gOa-Eg-3Fn" secondAttribute="centerX" id="MM9-YC-KXB"/>
+                            <constraint firstItem="HWM-6i-IT9" firstAttribute="top" secondItem="b8D-uC-jMf" secondAttribute="bottom" constant="67" id="NTq-vm-biS"/>
+                            <constraint firstItem="oGt-Pb-fFh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="54" id="hGz-VH-U0k"/>
+                            <constraint firstItem="b8D-uC-jMf" firstAttribute="leading" secondItem="oGt-Pb-fFh" secondAttribute="trailing" constant="66" id="k6g-PB-nG2"/>
+                            <constraint firstItem="OoA-NK-jvl" firstAttribute="leading" secondItem="oGt-Pb-fFh" secondAttribute="leading" id="nTq-Ic-k9g"/>
+                            <constraint firstItem="HWM-6i-IT9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="151" id="nbS-Cf-ymB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oGt-Pb-fFh" secondAttribute="bottom" constant="379" id="pUE-iH-32m"/>
+                            <constraint firstItem="CPU-sP-KpP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rJp-wP-ocS"/>
+                            <constraint firstItem="OoA-NK-jvl" firstAttribute="top" secondItem="HWM-6i-IT9" secondAttribute="bottom" constant="56" id="s2P-kG-7mr"/>
+                            <constraint firstItem="oGt-Pb-fFh" firstAttribute="top" secondItem="b8D-uC-jMf" secondAttribute="top" id="sLl-oR-yix"/>
+                            <constraint firstItem="gOa-Eg-3Fn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="95" id="wNH-8I-6iS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="diceImage1" destination="oGt-Pb-fFh" id="1wY-dM-iHz"/>
+                        <outlet property="diceImage2" destination="b8D-uC-jMf" id="cDR-Bv-j35"/>
+                        <outlet property="rollButton" destination="HWM-6i-IT9" id="HOU-wh-1Cq"/>
+                        <outlet property="scoreLabel" destination="OoA-NK-jvl" id="cui-bM-Ec6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="83.705357142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dice1" width="100" height="100"/>
+        <image name="diceeLogo" width="196" height="128"/>
+        <image name="newbackground" width="444.5" height="414"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
